<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.ForgotPassword"
    android:background="@color/white"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/blue2"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail"
            android:textColor="@color/blue2"
            android:textSize="18sp"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/blue4"
            app:boxStrokeWidthFocused="2dp"
            android:hint="@string/enter_email"
            app:startIconDrawable="@drawable/real_email_icon"
            app:startIconTint="@color/blue2"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            android:textColorHint="@color/blue4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue4"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@color/lightblue"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>