<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.VerifyPhoneOTP"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/close_icon"
            android:padding="5dp"
            android:onClick="BacktoMain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_code"
            android:layout_marginTop="50dp"
            android:textSize="90sp"
            android:textColor="@color/blue2"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="24sp"
            android:textColor="@color/blue2"
            android:fontFamily="@font/muli_black"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_description"
            android:textSize="16sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/blue4"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"/>


        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/grey"
            android:itemBackground="@color/lightWhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"/>


        <Button
            android:id="@+id/signup_verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:onClick="callNextScreenFromOTP"
            android:text="@string/otp_verify"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"/>




    </LinearLayout>

</ScrollView>