<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.Signup3nd"
    android:background="@color/white"
    android:padding="30dp"
    android:id="@+id/singup_3rd_screen_scroolview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/back_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/blue2"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_marginTop="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                app:ccp_defaultPhoneCode="60"
                app:ccp_defaultNameCode="MY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_arrowColor="@color/blue4"
                app:ccp_contentColor="@color/blue4"
                app:ccp_flagBorderColor="@color/blue2"
                app:ccpDialog_backgroundColor="@color/lightblue"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:padding="5dp"
                android:background="@drawable/black_border"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/blue4"
                android:textColorHint="@color/blue4"
                app:endIconMode="clear_text"
                app:endIconTint="@color/blue2"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/blue4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:background="@color/lightblue"
            android:textColor="@color/white"
            android:onClick="callVerifyScreen"
            android:layout_marginTop="20dp"
            android:elevation="5dp"/>


        <Button
            android:id="@+id/signup_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="#00000000"
            android:textColor="@color/blue2"
            android:onClick="callLoginScreen"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli"
            android:elevation="5dp"/>



    </LinearLayout>
</ScrollView>