<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignUp.ForgotPasswordByphoneno"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon"
            android:padding="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/blue2"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_detail2"
            android:textColor="@color/blue2"
            android:textSize="18sp"
            android:fontFamily="@font/muli"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"/>

         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

             <com.hbb20.CountryCodePicker
                 android:id="@+id/forgotpassword_country_code_picker"
                 app:ccp_defaultPhoneCode="60"
                 app:ccp_defaultNameCode="MY"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:ccp_arrowColor="@color/blue4"
                 app:ccp_contentColor="@color/blue4"
                 app:ccp_flagBorderColor="@color/blue2"
                 app:ccpDialog_backgroundColor="@color/lightblue"
                 app:ccp_showFlag="true"
                 app:ccp_showNameCode="true"
                 app:ccp_showFullName="true"
                 android:padding="5dp"
                 android:background="@drawable/black_border"/>

             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/forgotpassword_phone_number"
                 android:hint="@string/phone"
                 android:layout_below="@+id/forgotpassword_country_code_picker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                 app:boxBackgroundColor="@color/lightWhite"
                 app:boxStrokeColor="@color/blue4"
                 app:boxStrokeWidthFocused="2dp"
                 app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
                 app:startIconTint="@color/blue2"
                 app:endIconMode="clear_text"
                 app:endIconTint="@color/black"
                 android:textColorHint="@color/blue4">

                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="phone"/>

             </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotpassword_nextbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="verifyPhonenumber"
            android:layout_below="@+id/forgotpassword_phone_number"
            android:text="@string/next"
            android:background="@color/lightblue"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            tools:ignore="OnClick" />


         </RelativeLayout>
    </LinearLayout>

</ScrollView>